# RaxyMS-Security-Audit

./: .config.ini  .env.example  .gitignore  AGENTS.md  README.md  config.yaml  dump.rdb  example.json  proxies.txt  proxy.py  proxy_cache.json  requirements.txt  shell.nix
docs/: index.md  (+4 more)
raxy_project/: cli.py  config.example.yaml  config.yaml  dump.rdb  pyproject.toml  requirements.txt
raxy_project/Farm-046fa22dd30478ab4290675caa75cf9e01a0cc8f/: shell.nix
raxy_project/Farm-046fa22dd30478ab4290675caa75cf9e01a0cc8f/raxy-dashboard/: .example.env  package.json  pnpm-lock.yaml
raxy_project/Farm-046fa22dd30478ab4290675caa75cf9e01a0cc8f/raxy_project/: README.md
raxy_project/Farm-046fa22dd30478ab4290675caa75cf9e01a0cc8f/raxy_project/app/: dependencies.py  main.py
raxy_project/Farm-046fa22dd30478ab4290675caa75cf9e01a0cc8f/raxy_project/raxy/: __init__.py
raxy_project/Farm-046fa22dd30478ab4290675caa75cf9e01a0cc8f/raxy_project/tests/: README.md  test_database_switching.py  test_event_driven_logging.py  test_event_handlers.py  test_filesystem_switching.py
raxy_project/app/: dependencies.py  main.py  schemas.py  tasks.py  worker.py
raxy_project/app/controllers/: __init__.py  accounts_controller.py  auth_controller.py  executor_controller.py  flyout_controller.py  logging_controller.py  mailtm_controller.py  profile_controller.py  proxy_controller.py  rewards_controller.py  suggestion_controller.py
raxy_project/app/core/: base.py  exceptions.py  responses.py
raxy_project/app/dependencies/: __init__.py  base.py  core.py  repositories.py  services.py  session.py
raxy_project/app/schemas/: __init__.py  account_schemas.py  executor_schemas.py  flyout_schemas.py  proxy_schemas.py  rewards_schemas.py
raxy_project/raxy/: __init__.py  container.py  main.py  pyproject.toml
raxy_project/raxy/api/: base_api.py  bing_suggestion_api.py  db.py  mail_tm_api.py  mail_tm_example.py  rewards_data_api.py  supabase_api.py
raxy_project/raxy/api/proxy/: manager.py  proxy_cache.json
raxy_project/raxy/api/requests_templates/: rewards_obter_pontos.json  set_redemption_goal.json
raxy_project/raxy/config/: __init__.py  defaults.py
raxy_project/raxy/core/: config.py  exceptions.py  network_service.py  session_manager_service.py  session_service.py
raxy_project/raxy/core/config/: __init__.py  api_config.py  app_config.py  base.py  executor_config.py  loader.py  proxy_config.py
raxy_project/raxy/database/: __init__.py  supabase_client.py
raxy_project/raxy/domain/: __init__.py  accounts.py  events.py  infra_services.py  mailtm_data.py  proxy.py
raxy_project/raxy/drivers/: __init__.py  botasaurus_driver.py  mock_driver.py  selenium_driver.py
raxy_project/raxy/interfaces/: __init__.py
raxy_project/raxy/models/: __init__.py  accounts.py  execution.py  flyout.py  infra_services.py  rewards.py  suggestion.py
raxy_project/raxy/proxy/: __init__.py  manager.py
raxy_project/raxy/raxy_logic.egg-info/: PKG-INFO  SOURCES.txt
raxy_project/raxy/repositories/: file_account_repository.py  sqlalchemy_repository.py
raxy_project/raxy/services/: __init__.py  auth_service.py  base_service.py  bingflyout_service.py  dashboard_service.py  executor_service.py  logging_service.py  perfil_service.py  rewards_browser_service.py  session_manager_service.py  solicitacoes_service.py
raxy_project/raxy/storage/: __init__.py
raxy_project/raxy/tests/: __init__.py  test_base_modelos.py  test_executor.py  test_login.py  test_rewards_api.py  test_rewards_data_api.py
raxy_project/src/raxy/: __init__.py
raxy_project/tests/: smoke_test.py  test_driver_switching.py  test_event_bus.py
(+357 files in other folders)
