[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raxyms"
version = "1.0.0"
description = "Biblioteca com a lógica de negócio principal do Raxy."
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "botasaurus",
    "rich",
    "supabase",
    "random-user-agent",
    "flask",
    "fastapi",
    "uvicorn[standard]",
    "typer",
    "loguru",
    "dependency-injector",
    "pyyaml",
    "httpx",
    "python-dotenv",
    "urllib3",
    "redis",
    "requests",
    "selenium",
    "wonderwords",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
include = ["raxy*"]
exclude = ["profiles*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
